--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "The Wedding of Suci & Nu'man",
-    "short_name": "wedding.numan-dev.my.id",
+    "short_name": "Sabtu, 01 Oktober 2022",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
@@ -10,38 +10,8 @@
     "prefer_related_applications": false,
     "icons": [
         {
-            "src": "icons/android-icon-36x36.png",
-            "sizes": "36x36",
-            "type": "image\/png",
-            "density": "0.75"
-        },
-        {
-            "src": "icons/android-icon-48x48.png",
-            "sizes": "48x48",
-            "type": "image\/png",
-            "density": "1.0"
-        },
-        {
-            "src": "icons/android-icon-72x72.png",
-            "sizes": "72x72",
-            "type": "image\/png",
-            "density": "1.5"
-        },
-        {
-            "src": "icons/android-icon-96x96.png",
-            "sizes": "96x96",
-            "type": "image\/png",
-            "density": "2.0"
-        },
-        {
-            "src": "icons/android-icon-144x144.png",
-            "sizes": "144x144",
-            "type": "image\/png",
-            "density": "3.0"
-        },
-        {
-            "src": "icons/android-icon-192x192.png",
-            "sizes": "192x192",
+            "src": "icons/apple-icon-180x180.png",
+            "sizes": "180x180",
             "type": "image\/png",
             "density": "4.0"
         }
